--- a/css/forms.css
+++ b/css/forms.css
@@ -6,7 +6,7 @@
     font-family: "Poppins", sans-serif;
 }
 body{
-    background: rgb(198, 233, 233);
+    background:rgb(43, 42, 42);
 }
 .wrapper{
     width: 350px;
@@ -41,10 +41,10 @@ button{
     width: 90%;
     color: #fff;
     cursor: pointer;
-    background: darkcyan;
+    background: black;
 }
 button:hover{
-    background: rgb(1, 52, 52);
+    background: rgb(41, 40, 40);
 }
 input:focus{
     border: 1px solid rgb(192, 192, 192);
@@ -62,7 +62,7 @@ input:focus{
     font-size: 0.7rem;
 }
 .terms a{
-    color: rgb(17, 107, 143);
+    color: black;
     text-decoration: none;
 }
 .member{
@@ -72,7 +72,7 @@ input:focus{
 
 }
 .member a{
-    color: rgb(17, 107, 143);
+    color: black;
     text-decoration: none;
 }
 .recover{
